worked on nav and logo comoponents

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "./global/variables.scss";
+@import "./components/card";
 @import "./global/app.scss";
 @import "./components/nav";
 @import "./components/footer";
