--- a/src/styles/components/_members.scss
+++ b/src/styles/components/_members.scss
@@ -1,5 +1,36 @@
+.members {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 100px;
+  align-items: center;
+  margin: 50px auto;
+  color: $darkGray;
+}
+
 .members h4 {
   text-transform: uppercase;
+  margin-bottom: 20px;
+  font-weight: normal;
+  line-height: 1.5rem;
+  // font-size: 1.02rem;
+}
+
+.members h2 {
+  font-size: 2.3rem;
+  margin-bottom: 50px;
+  font-weight: normal;
+  line-height: 1.8rem;
+}
+
+.membersName {
+  font-size: 1.7rem;
+  text-align: center;
+  display: inline-block;
+  padding: 10px;
+  font-weight: normal;
+  line-height: 1.5rem;
 }
 
 .membersListContainer {
