--- a/src/styles/components/_uploads.scss
+++ b/src/styles/components/_uploads.scss
@@ -20,12 +20,12 @@
 
 .video {
   opacity: 0;
-  transition-duration: 1s ease;
+  transition: .5s ease;
 }
 
 button {
   font-size: 3rem;
-  font-weight: bolder;
+  font-weight: normal;
   display: inline-block;
   border: none;
   background: none;
@@ -34,17 +34,19 @@ button {
   z-index: 100;
   cursor: pointer;
   color: $red;
-  text-shadow: 0 0 1rem $red;
+  text-shadow: 1px 1px 5px $white, 0 0 1em $white, 0 0 .2em $white;
 }
 
 button:hover{
   scale: 1.5;
+  transition: 0.2s ease;
+  text-shadow: inset 1px 1px 5px $white;
 }
 
 .leftArrow {
-  left: 5%;
+  left: 2%;
 }
 
 .rightArrow {
-  right: 5%;
+  right: 2%;
 }
