worked on opportunity and call to action components

--- a/src/styles/global/_app.scss
+++ b/src/styles/global/_app.scss
@@ -300,3 +300,20 @@ ul {
   width: 90%;
   margin: 50px auto;
 }
+
+section {
+  width: 90%;
+  margin: 100px auto;
+}
+
+h2 {
+  font-size: 32px;
+  line-height: 36px;
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-size: 24px;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
