--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,4 +3,6 @@
 @import "./components/card";
 @import "./global/app.scss";
 @import "./components/nav";
+@import "./components/imageGallery";
+@import "./components/contentBlock";
 @import "./components/footer";
