--- a/src/styles/components/_mainCard.scss
+++ b/src/styles/components/_mainCard.scss
@@ -1,14 +1,13 @@
 .mainCard {
-  background: linear-gradient(
-      90deg,
-      rgb(211, 200, 224) 50%,
-      transparent,
-      rgb(255, 255, 255) 100%
-    ),
-    url(../../assets/banner.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  // background: linear-gradient(
+  //   90deg,
+  //   rgb(211, 200, 224) 50%,
+  //   transparent,
+  //   rgb(255, 255, 255) 100%
+  // );
+  // background-repeat: no-repeat;
+  // background-position: center;
+  // background-size: cover;
   border-radius: 15px;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.15);
   padding: 50px;
