--- a/src/styles/components/_uploads.scss
+++ b/src/styles/components/_uploads.scss
@@ -23,25 +23,25 @@
   transition: .5s ease;
 }
 
-button {
-  font-size: 3rem;
-  font-weight: normal;
-  display: inline-block;
-  border: none;
-  background: none;
-  position: absolute;
-  top: calc(50% - 1.5rem);
-  z-index: 100;
-  cursor: pointer;
-  color: $red;
-  text-shadow: 1px 1px 5px $white, 0 0 1em $white, 0 0 .2em $white;
-}
+// button {
+//   font-size: 3rem;
+//   font-weight: normal;
+//   display: inline-block;
+//   border: none;
+//   background: none;
+//   position: absolute;
+//   top: calc(50% - 1.5rem);
+//   z-index: 100;
+//   cursor: pointer;
+//   color: $red;
+//   text-shadow: 1px 1px 5px $white, 0 0 1em $white, 0 0 .2em $white;
+// }
 
-button:hover{
-  scale: 1.5;
-  transition: 0.2s ease;
-  text-shadow: inset 1px 1px 5px $white;
-}
+// button:hover{
+//   scale: 1.5;
+//   transition: 0.2s ease;
+//   text-shadow: inset 1px 1px 5px $white;
+// }
 
 .leftArrow {
   left: 2%;
