--- a/src/styles/components/_members.scss
+++ b/src/styles/components/_members.scss
@@ -4,7 +4,6 @@
   flex-direction: column;
   justify-content: center;
   gap: 100px;
-  align-items: center;
   margin: 50px auto;
   color: $darkGray;
 }
@@ -13,10 +12,9 @@
   display: inline-block;
   text-align: center;
   text-transform: uppercase;
-  margin-bottom: 20px;
   font-weight: normal;
   line-height: 1.5rem;
-  height: 3rem;
+  height: 5rem;
 }
 
 .members h2 {
@@ -47,7 +45,7 @@
 .membersList {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  // justify-content: space-between;
   align-items: center;
 }
 
@@ -57,6 +55,18 @@
   border-radius: 10px;
   max-width: 100%;
   height: 150px;
+}
+
+.membersTitle {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-align: center;
+  &:hover {
+    overflow: visible;
+    scale: 1.05;
+  }
 }
 
 .membersIntro {
@@ -71,4 +81,8 @@
   -webkit-line-clamp: 8;
   -webkit-box-orient: vertical;
   text-align: center;
+  &:hover {
+    overflow: visible;
+    scale: 1.05;
+  }
 }
