--- a/src/styles/components/_imageGallery.scss
+++ b/src/styles/components/_imageGallery.scss
@@ -9,6 +9,14 @@
     flex-basis: calc((100% / 4) - 40px);
     margin: 0 20px;
     gap: 25px;
+
+    @media (max-width: 1187px) {
+      flex-basis: calc((100% / 2) - 40px);
+      margin: 20px;
+      justify-content: center;
+      justify-items: center;
+      align-items: center;
+    }
     .roundImgContainer {
       width: 200px;
       height: 200px;
@@ -20,8 +28,5 @@
     h4 {
       font-weight: 800;
     }
-  }
-  li.hiddenItem {
-    display: none;
   }
 }
