--- a/src/styles/components/_imageGallery.scss
+++ b/src/styles/components/_imageGallery.scss
@@ -10,13 +10,13 @@
     margin: 0 20px;
     gap: 25px;
 
-    @media (max-width: 1187px) {
-      flex-basis: calc((100% / 2) - 40px);
-      margin: 20px;
-      justify-content: center;
-      justify-items: center;
-      align-items: center;
-    }
+    // @media (max-width: 1187px) {
+    //   flex-basis: calc((100% / 2) - 40px);
+    //   margin: 20px;
+    //   justify-content: center;
+    //   justify-items: center;
+    //   align-items: center;
+    // }
     .roundImgContainer {
       width: 200px;
       height: 200px;
