--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,4 @@
 @import "./components/uploads";
 @import "./components/report";
 @import "./components/errorPage";
+@import "./components/errorData";
