--- a/src/styles/components/_members.scss
+++ b/src/styles/components/_members.scss
@@ -14,7 +14,7 @@
   text-transform: uppercase;
   font-weight: normal;
   line-height: 1.5rem;
-  height: 5rem;
+  margin-bottom: 20px;
 }
 
 .members h2 {
@@ -40,6 +40,15 @@
   grid-template-columns: repeat(auto-fill, minmax(20%, 22%));
   justify-content: space-between;
   gap: 0.8rem;
+  @media(max-width: 890px) {
+    grid-template-columns: repeat(auto-fill, minmax(25%, 30%));
+  }
+  @media(max-width: 590px) {
+    grid-template-columns: repeat(auto-fill, minmax(40%, 45%));
+  }
+  @media(max-width: 414px) {
+    grid-template-columns: none;
+  }
 }
 
 .membersList {
@@ -47,6 +56,15 @@
   flex-direction: column;
   // justify-content: space-between;
   align-items: center;
+  &:hover {
+    // overflow: visible;
+    scale: 1.05;
+    background-color: $white;
+    .membersTitle,
+    .membersIntro {
+      overflow: visible;
+    }
+  }
 }
 
 .membersPic {
@@ -63,10 +81,11 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   text-align: center;
-  &:hover {
-    overflow: visible;
-    scale: 1.05;
-  }
+  height: 3rem;
+  // &:hover {
+  //   overflow: visible;
+  //   scale: 1.05;
+  // }
 }
 
 .membersIntro {
@@ -81,8 +100,19 @@
   -webkit-line-clamp: 8;
   -webkit-box-orient: vertical;
   text-align: center;
-  &:hover {
-    overflow: visible;
-    scale: 1.05;
-  }
+  // &:hover {
+  //   overflow: visible;
+  //   scale: 1.05;
+  // }
+}
+
+.backdrop {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100vh;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.75);
+  color: $white;
 }
