--- a/src/styles/components/_imageGallery.scss
+++ b/src/styles/components/_imageGallery.scss
@@ -1,6 +1,5 @@
 .galleryContainer {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   li {
@@ -10,13 +9,17 @@
     margin: 0 20px;
     gap: 25px;
 
-    // @media (max-width: 1187px) {
-    //   flex-basis: calc((100% / 2) - 40px);
-    //   margin: 20px;
-    //   justify-content: center;
-    //   justify-items: center;
-    //   align-items: center;
-    // }
+    @media (max-width: 1187px) {
+      flex-basis: calc((100% / 3) - 40px);
+      margin: 20px;
+    }
+    @media (max-width: 890px) {
+      flex-basis: calc((100% / 2) - 40px);
+    }
+    @media (max-width: 590px) {
+      flex-basis: 100%;
+      align-items: center;
+    }
     .roundImgContainer {
       width: 200px;
       height: 200px;
