--- a/src/styles/global/_app.scss
+++ b/src/styles/global/_app.scss
@@ -304,6 +304,10 @@ ul {
 section {
   width: 90%;
   margin: 100px auto;
+
+  @media (max-width: 590px) {
+    width: 100%;
+  }
 }
 
 h2 {
@@ -316,6 +320,10 @@ h3 {
   font-size: 24px;
   line-height: 30px;
   margin-bottom: 20px;
+}
+
+h4 {
+  color: $black;
 }
 
 .logoContainer {
