--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,6 +2,12 @@ footer {
   box-shadow: 7px -1px 5px rgb(0 0 0 / 5%);
   font-weight: 800;
   padding: 20px 0 50px 0;
+  @media (max-width: 890px) {
+    padding: 20px 50px;
+  }
+  @media (max-width: 414px) {
+    padding: 20px;
+  }
   .footerContainer {
     display: flex;
     justify-content: space-around;
@@ -15,12 +21,21 @@ footer {
       display: flex;
       justify-content: flex-end;
       gap: 80px;
+      @media (max-width: 890px) {
+        flex-direction: column;
+        gap: 25px;
+      }
       ul {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         gap: 10px;
       }
+    }
+    @media (max-width: 890px) {
+      flex-direction: column;
+      align-items: self-start;
+      gap: 25px;
     }
   }
 }
