--- a/src/styles/global/_app.scss
+++ b/src/styles/global/_app.scss
@@ -323,9 +323,13 @@ h3 {
 }
 
 h4 {
-  color: $black;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .logoContainer {
   width: 350px;
+  @media (max-width: 414px) {
+    width: clamp(250px, 75vw, 350px);
+  }
 }
