working on mobile menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,4 @@
 @import "./components/members";
 @import "./components/uploads";
 @import "./components/mediaList";
+@import "./components/navMobile";
