--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -14,5 +14,14 @@ nav {
     color: $darkGray;
     font-size: 14px;
     font-weight: 800;
+    @media (max-width: 890px) {
+      flex-direction: column;
+    }
+  }
+  .burgerMenu {
+    display: none;
+    @media (max-width: 890px) {
+      display: flex;
+    }
   }
 }
