fixing nav and footer

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -11,15 +11,21 @@ footer {
   .footerContainer {
     display: flex;
     justify-content: space-around;
-    // align-items: end;
     align-items: center;
-    gap: 50px;
+    gap: 70px;
+
+    p {
+      // font-size: 1rem;
+      font-size: 0.875rem;
+    }
     .logoContainer {
       margin-bottom: 25px;
     }
     .socialMediaContainer {
       display: flex;
       justify-content: flex-end;
+      font-size: 0.875rem;
+
       gap: 80px;
       @media (max-width: 890px) {
         flex-direction: column;
