--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -15,7 +15,7 @@ nav {
     align-items: center;
     gap: 30px;
     color: $darkGray;
-    font-size: 14px;
+    // font-size: 14px;
     font-weight: 800;
   }
 }
