refactor upload player styling and article fxn with error guarding

--- a/src/styles/components/_uploads.scss
+++ b/src/styles/components/_uploads.scss
@@ -48,7 +48,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // .uploadsContainer {
-  //   height: 90vh;
-  // }
+  .uploadsContainer {
+    width: 100%;
+  }
+}
+
+iframe {
+  border-radius: 15px;
 }
