--- a/src/styles/components/_members.scss
+++ b/src/styles/components/_members.scss
@@ -130,13 +130,13 @@
   // }
 }
 
-.backdrop {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100vh;
-  z-index: 100;
-  background: rgba(0, 0, 0, 0.75);
-  color: $white;
-}
+// .backdrop {
+//   position: fixed;
+//   top: 50%;
+//   left: 50%;
+//   width: 100%;
+//   height: 100vh;
+//   z-index: 100;
+//   background: rgba(0, 0, 0, 0.75);
+//   color: $white;
+// }
