--- a/src/styles/components/_contentBlock.scss
+++ b/src/styles/components/_contentBlock.scss
@@ -1,6 +1,9 @@
 .blockContentContainer {
   margin: 100px auto;
-  p {
+  h3 {
+    margin-bottom: 25px;
+  }
+  p.firstParagraph {
     margin-bottom: 20px;
   }
 }
