fixed wrapper, margins and width

--- a/src/styles/components/_mainCard.scss
+++ b/src/styles/components/_mainCard.scss
@@ -4,8 +4,8 @@
   justify-content: center;
   border-radius: 15px;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.15);
-  padding: 50px;
-  min-height: 60vh;
+  padding: 50px 50px 70px;
+  // min-height: 60vh;
   h2 {
     margin-bottom: 30px;
   }
