--- a/src/styles/components/_members.scss
+++ b/src/styles/components/_members.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 100px;
+  gap: 150px;
   // margin: 50px auto;
   // color: $darkGray;
 }
@@ -34,7 +34,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(18%, 20%));
   justify-content: space-between;
-  gap: 2rem;
+  grid-column-gap: 2rem;
+  grid-row-gap: 6rem;
   @media(max-width: 1101px) {
     grid-template-columns: repeat(auto-fill, minmax(25%, 30%));
     gap: 1.5rem;
