modified report title on newsroom page

--- a/src/styles/components/_report.scss
+++ b/src/styles/components/_report.scss
@@ -62,6 +62,8 @@
   font-weight: 800;
   color: $white;
   height: 250px;
+  text-align: left;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.50);
 }
 
 .reportButton {
