--- a/src/styles/components/_mainCard.scss
+++ b/src/styles/components/_mainCard.scss
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-radius: 15px;
+  border-radius: 10px;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.15);
   padding: 50px 50px 70px;
   // min-height: 60vh;
   h2 {
     margin-bottom: 30px;
+    width: 50%;
   }
   .contentBlockContainer {
     width: 60%;
