--- a/src/styles/components/_uploads.scss
+++ b/src/styles/components/_uploads.scss
@@ -5,7 +5,7 @@
 
 .carousel .slide iframe {
   width: 100%;
-  border-radius: 15px;
+  border-radius: 10px;
   margin: 0;
 }
 
@@ -24,12 +24,10 @@
   top: calc(50% - 1.5rem);
   cursor: pointer;
   color: $red;
-  text-shadow: 1px 1px 5px $white,
-    0 0 1em $white,
-    0 0 .2em $white;
+  text-shadow: 1px 1px 5px $white, 0 0 1em $white, 0 0 0.2em $white;
 }
 
-.carousel-slider button:hover{
+.carousel-slider button:hover {
   scale: 1.5;
   transition: 0.2s ease;
   text-shadow: inset 1px 1px 5px $white;
@@ -55,5 +53,5 @@
 }
 
 iframe {
-  border-radius: 15px;
+  border-radius: 10px;
 }
