--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -16,6 +16,7 @@ nav {
     font-weight: 800;
     @media (max-width: 890px) {
       flex-direction: column;
+      z-index: 999;
     }
   }
   .burgerMenu {
