made nav responsive - momentary fix

--- a/src/styles/components/_imageGallery.scss
+++ b/src/styles/components/_imageGallery.scss
@@ -23,6 +23,7 @@
     .roundImgContainer {
       width: 150px;
       height: 150px;
+      margin: 0 auto;
       img {
         height: 100%;
         border-radius: 50%;
