--- a/src/styles/components/_members.scss
+++ b/src/styles/components/_members.scss
@@ -3,35 +3,37 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 150px;
-}
-
-.memberType {
-  margin-bottom: 50px;
-  font-weight: 600;
-}
-
-.memberSection {
-  color: $gray;
-  display: inline-block;
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: normal;
-  margin-bottom: 20px;
+  gap: 110px;
+  .memberSection {
+    color: $gray;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: normal;
+    margin-bottom: 20px;
+  }
+  .memberType {
+    margin-bottom: 50px;
+    font-weight: 600;
+  }
 }
 
 .membersListContainer {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(18%, 20%));
   justify-content: space-between;
-  grid-column-gap: 2rem;
-  grid-row-gap: 6rem;
-  @media(max-width: 1101px) {
-    grid-template-columns: repeat(auto-fill, minmax(25%, 30%));
-    gap: 1.5rem;
+  gap: 6rem 2rem;
+  @media(max-width: 1103px) {
+    grid-template-columns: repeat(auto-fill, minmax(20%, 25%));
+    gap: 5rem 1.5rem;
   }
-  @media (max-width: 903px) {
-    gap: 1.1rem;
+  @media (max-width: 930px) {
+    grid-template-columns: repeat(auto-fill, minmax(25%, 28%));
+    gap: 4rem 1.5rem;
+  }
+  @media (max-width: 832px) {
+    grid-template-columns: repeat(auto-fill, minmax(28%, 30%));
+    gap: 3rem 1rem;
   }
   @media (max-width: 752px) {
     grid-template-columns: repeat(auto-fill, minmax(40%, 45%));
@@ -49,61 +51,44 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  &:hover {
-    scale: 1.1;
-    background-color: $white;
-    z-index: 100;
-    transition: 0.3s ease;
-    .membersTitle,
-    .membersIntro {
-      overflow: visible;
+    .membersPic {
+      align-self: center;
       display: block;
-      height: auto;
-      overflow-wrap: break-word;
+      object-fit: cover;
+      object-position: top;
+      border-radius: 10px;
+      max-width: 100%;
+      aspect-ratio: 132 / 101;
     }
   }
-}
-
-.membersName {
-  display: inline-block;
-  text-align: center;
-  margin: 20px 0 30px 0;
-  height: 3rem;
-  font-weight: 500;
-}
-
-.membersPic {
-  align-self: center;
-  display: block;
-  object-fit: cover;
-  object-position: top;
-  border-radius: 10px;
-  max-width: 100%;
-  aspect-ratio: 4 / 3;
-}
-
-.membersTitle {
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  text-align: center;
-  text-align: center;
-  text-transform: uppercase;
-  display: block;
-  max-width: 100%;
-  height: 1.2rem;
-  font-weight: 600;
-  color: $gray;
-  margin-bottom: 10px;
-}
-
-.membersIntro {
-  max-width: 100%;
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-line-clamp: 8;
-  -webkit-box-orient: vertical;
-  text-align: center;
+  .membersName {
+    text-align: center;
+    margin: 20px 0 10px 0;
+    height: 3rem;
+    h3 {
+      font-size: 1.3rem;
+      font-weight: 500;
+    }
+  }
+  .membersTitle {
+    text-align: center;
+    max-width: 100%;
+    height: auto;
+    font-weight: 600;
+    margin: 10px 0;
+    overflow: hidden;
+    letter-spacing: -1px;
+    h4 {
+      color: $gray;
+    }
+  }
+  .membersIntro {
+    margin-top: 10px;
+    max-width: 100%;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 8;
+    -webkit-box-orient: vertical;
+    text-align: center;
+  }
 }
