--- a/src/styles/components/_members.scss
+++ b/src/styles/components/_members.scss
@@ -19,31 +19,15 @@
 }
 
 .membersListContainer {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(18%, 20%));
-  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
   gap: 6rem 2rem;
-  @media(max-width: 1103px) {
-    grid-template-columns: repeat(auto-fill, minmax(20%, 25%));
-    gap: 5rem 1.5rem;
-  }
-  @media (max-width: 930px) {
-    grid-template-columns: repeat(auto-fill, minmax(25%, 28%));
-    gap: 4rem 1.5rem;
-  }
-  @media (max-width: 832px) {
-    grid-template-columns: repeat(auto-fill, minmax(28%, 30%));
-    gap: 3rem 1rem;
-  }
-  @media (max-width: 752px) {
-    grid-template-columns: repeat(auto-fill, minmax(40%, 45%));
-  }
-  @media (max-width: 558px) {
-    grid-template-columns: none;
-  }
 }
 
 .membersList {
+  flex-basis: calc(100% / 4 - 30px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,8 +36,6 @@
     justify-content: center;
     align-items: center;
     .membersPic {
-      align-self: center;
-      display: block;
       object-fit: cover;
       object-position: top;
       border-radius: 10px;
@@ -90,5 +72,32 @@
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
     text-align: center;
+  }
+}
+
+@media(max-width: 1103px) {
+  .membersListContainer {
+    gap: 5rem 1.5rem;
+    .membersList {
+      flex-basis: calc(100% / 3 - 30px);
+    }
+  }
+}
+
+@media(max-width: 832px) {
+  .membersListContainer {
+    gap: 3rem 1rem;
+    .membersList {
+      flex-basis: calc(100% / 2 - 40px);
+    }
+  }
+}
+
+@media(max-width: 663px) {
+  .membersListContainer {
+    gap: 3rem;
+    .membersList {
+      flex-basis: calc(100% - 50px);
+    }
   }
 }
