created resources-page and rendered report component

--- a/src/styles/components/_report.scss
+++ b/src/styles/components/_report.scss
@@ -1,3 +1,7 @@
+.pageTitle {
+  margin-bottom: 80px;
+}
+
 .reportList {
   display: flex;
   flex-wrap: wrap;
@@ -103,6 +107,5 @@
     transition: 0.1s ease;
     background-color: $lightBlue;
     color: $white;
-    color: rgb(255, 255, 255)
   }
 }
