--- a/src/styles/components/_mediaList.scss
+++ b/src/styles/components/_mediaList.scss
@@ -1,3 +1,7 @@
+.pageTitle {
+  margin-bottom: 80px;
+}
+
 .mediaList {
   display: flex;
   flex-wrap: wrap;
@@ -92,6 +96,5 @@
     transition: 0.1s ease;
     background-color: $lightBlue;
     color: $white;
-    color: rgb(255, 255, 255)
   }
 }
