changed content model to pull body content from contentful and functional components and its styling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@
 @import "./components/card";
 @import "./components/members";
 @import "./components/imageGallery";
-@import "./components/contentBlock";
+@import "./components/content";
 @import "./components/mediaList";
 @import "./components/report";
 @import "./components/errorPage";
