--- a/src/styles/components/_errorPage.scss
+++ b/src/styles/components/_errorPage.scss
@@ -10,4 +10,20 @@
   p {
     width: 30%;
   }
+  .goBackHome {
+    padding: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 15px 35px;
+    border-radius: 10px;
+    border: none;
+    background-color: $white;
+    color: $darkGray;
+    &:hover {
+      background-color: $lightBlue;
+      color: $white;
+      scale: 1.08;
+      transition: 0.1s ease;
+    }
+  }
 }
