created basic blog component, its contents and its styling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,5 +9,6 @@
 @import "./components/content";
 @import "./components/mediaList";
 @import "./components/report";
+@import "./components/blogList";
 @import "./components/errorPage";
 @import "./components/errorData";
