added loader component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,4 @@
 @import "./components/report";
 @import "./components/errorPage";
 @import "./components/errorData";
+@import "./components/loader";
