--- a/src/styles/components/_mediaList.scss
+++ b/src/styles/components/_mediaList.scss
@@ -1,6 +1,7 @@
 .pageTitle {
   margin-bottom: 80px;
 }
+
 .mediaList {
   display: flex;
   flex-wrap: wrap;
@@ -9,19 +10,11 @@
   .mediaContainer {
     flex-basis: calc(25% - 20px);
     margin-bottom: 60px;
-    position: relative;
-    background: $darkGray;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 450px;
-    .mediaImg {
-      position: absolute;
-      max-width: 90%;
-      opacity: 0.3;
-    }
     .mediaBg {
       border-radius: 10px;
       height: auto;
@@ -30,14 +23,14 @@
       justify-content: space-between;
       align-items: flex-start;
       gap: 10px;
-      padding: 30px 35px;
+      padding: 30px 25px;
     }
   }
   .mediaContainer:nth-child(6n-3),
   .mediaContainer:nth-child(6n-2) {
     flex-basis: calc(50% - 20px);
   }
-  @media (max-width: 993px) {
+  @media(max-width: 993px) {
     justify-content: space-between;
     .mediaContainer,
     .mediaContainer:nth-child(6n-3),
@@ -46,7 +39,7 @@
       margin-bottom: 40px;
     }
   }
-  @media (max-width: 753px) {
+  @media(max-width: 753px) {
     justify-content: space-between;
     .mediaContainer,
     .mediaContainer:nth-child(6n-3),
@@ -55,7 +48,7 @@
       margin-bottom: 30px;
     }
   }
-  @media (max-width: 590px) {
+  @media(max-width: 590px) {
     justify-content: center;
     gap: 20px;
     .mediaContainer,
@@ -73,14 +66,12 @@
   font-weight: 500;
   height: 2.5rem;
   color: $white;
-  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-  z-index: 999;
-
-  @media (max-width: 845px) {
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+  @media(max-width: 845px) {
     font-size: 0.6rem;
     line-height: 1rem;
   }
-  @media (max-width: 324px) {
+  @media(max-width: 324px) {
     font-size: 0.5rem;
     line-height: 0.8rem;
   }
@@ -92,16 +83,16 @@
   height: 12rem;
   max-width: 70%;
   text-align: left;
-  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
   display: -webkit-box;
   overflow: hidden;
   -webkit-line-clamp: 8;
   -webkit-box-orient: vertical;
-  @media (max-width: 845px) {
+  @media(max-width: 845px) {
     font-size: 1rem;
     line-height: 1.2rem;
   }
-  @media (max-width: 324px) {
+  @media(max-width: 324px) {
     font-size: 0.9rem;
     line-height: 1rem;
   }
@@ -115,7 +106,8 @@
   font-weight: bold;
   padding: 10px 35px;
   border-radius: 5px;
-  min-width: 50%;
+  // min-width: 50%;
+  width: 100px;
   background-color: $white;
   font-size: 0.7rem;
   line-height: 1rem;
