changed home-page layout and its styling to match v2

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -29,6 +29,7 @@ footer {
         flex-direction: column;
         justify-content: space-between;
         gap: 10px;
+        text-transform: capitalize;
       }
     }
     @media (max-width: 890px) {
