--- a/src/styles/components/_members.scss
+++ b/src/styles/components/_members.scss
@@ -1,4 +1,5 @@
 .members {
+  margin-top: 110px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,121 +12,215 @@
     width: 100%;
     height: 5rem;
     display: flex;
-    justify-content: center;
     align-items: center;
+    margin-bottom: 110px;
     .memberType {
       font-weight: 600;
       font-size: 1.9rem;
       line-height: 2.2rem;
       text-transform: uppercase;
       color: $white;
+      margin-left: 30px;
     }
   }
 }
 
 .membersListContainer {
-  margin-top: 110px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: stretch;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fill, minmax(30%, calc(100% / 3 - 30px)));
+  justify-content: space-between;
   gap: 4rem 2rem;
 }
 
 .membersList {
-  flex-basis: calc(100% / 3 - 30px);
   display: flex;
   flex-direction: column;
+  align-items: stretch;
   .membersIntro {
     p {
       margin-top: 10px;
       max-width: 100%;
-      display: -webkit-box;
-      overflow: hidden;
-      -webkit-line-clamp: 8;
-      -webkit-box-orient: vertical;
       text-align: left;
       word-break: break-word;
     }
   }
 }
 
+.supportersList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.supporterPicContainer {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .supporterPic {
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+  }
+}
+.supporterTextContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  .membersName h3,
+  .membersTitle h4{
+    text-align: center;
+  }
+}
+
 .topContainer {
   align-self: flex-start;
   display: flex;
-  gap: 10px;
+  align-items: center;
+  gap: 5px;
   .picContainer {
+    flex: 1 0 calc(40% - 5px);
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100px;
     .membersPic {
       object-fit: cover;
       object-position: top;
       border-radius: 50%;
-      width: 100px;
-      height: 100px;
+      width: 100%;
+      aspect-ratio: 1 / 1;
     }
   }
 }
 
 .rightContainer {
+  flex: 1 0 60%;
   align-self: center;
-  height: 150px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   gap: 10px;
-  .membersName {
-    h3 {
-      text-align: left;
-      // margin: 20px 0 10px 0;
-      height: auto;
-      font-size: 1.3rem;
-      font-weight: 500;
-    }
+}
+
+.membersName {
+  h3 {
+    text-align: left;
+    font-size: 1.2rem;
+    font-weight: 500;
+    letter-spacing: -1px;
   }
-  .membersTitle {
-    h4 {
-      text-align: left;
-      max-width: 100%;
-      height: auto;
-      font-weight: 600;
-      // margin: 10px 0;
-      overflow: hidden;
-      letter-spacing: -1px;
-      color: $gray;
-    }
+}
+
+.membersTitle {
+  h4 {
+    max-width: 100%;
+    text-align: left;
+    font-weight: 600;
+    overflow: hidden;
+    letter-spacing: -1px;
+    color: $gray;
   }
 }
 
 @media (max-width: 1103px) {
   .membersListContainer {
+    grid-template-columns: repeat(auto-fill, minmax(30%, calc(100% / 3 - 25px)));
     gap: 3.5rem 1.5rem;
-    .membersList {
-      flex-basis: calc(100% / 3 - 30px);
+  }
+}
+@media (max-width: 925px) {
+  .membersListContainer {
+    grid-template-columns: repeat(auto-fill, minmax(30%, calc(100% / 3 - 20px)));
+    gap: 3rem 1.25rem;
+  }
+}
+@media (max-width: 908px) {
+  .rightContainer {
+    height: 220px;
+  }
+}
+@media (max-width: 877px) {
+  .membersListContainer {
+    grid-template-columns: repeat(auto-fill, minmax(45%, calc(100% / 2 - 20px)));
+    gap: 2.75rem 1.25rem;
+    .rightContainer {
+      height: 180px;
     }
   }
 }
-
 @media (max-width: 832px) {
   .membersListContainer {
     gap: 2.5rem 1rem;
-    .membersList {
-      flex-basis: calc(100% / 2 - 40px);
+  }
+}
+@media (max-width: 748px) {
+  .membersListContainer {
+    .rightContainer {
+      height: 200px;
     }
   }
 }
-
 @media (max-width: 663px) {
   .membersListContainer {
+    grid-template-columns: 100%;
     gap: 2rem;
-    .membersList {
-      flex-basis: 100%;
+    .topContainer {
+      gap: 10px;
+      .picContainer {
+        flex: 1 0 calc(25% - 5px);
+      }
+      .rightContainer {
+        flex: 1 0 75%;
+        height: 150px;
+      }
     }
-    .membersName {
-      font-size: 1rem;
+  }
+  .supporterPicContainer {
+    width: 60%;
+  }
+}
+@media (max-width: 482px) {
+  .membersListContainer {
+    .topContainer {
+      .picContainer {
+        flex: 1 0 calc(37% - 5px);
+      }
+      .rightContainer {
+        flex: 1 0 63%;
+      }
     }
+  }
+}
+@media (max-width: 414px) {
+  .membersListContainer {
+    .topContainer {
+      .picContainer {
+        flex: 1 0 calc(35% - 5px);
+      }
+      .rightContainer {
+        flex: 1 0 65%;
+        height: 150px;
+        .membersName h3 {
+          font-size: 1rem;
+        }
+        .membersTitle h4 {
+          font-size: 0.7rem;
+        }
+      }
+    }
+  }
+  .supporterTextContainer .membersName h3 {
+    font-size: 1rem;
+  }
+  .supporterTextContainer .membersTitle h4 {
+    font-size: 0.7rem;
   }
 }
