--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -13,6 +13,10 @@ footer {
     justify-content: space-around;
     align-items: center;
     gap: 30px;
+    p {
+      color: $darkGreen;
+    }
+
     .logoContainer {
       margin-bottom: 25px;
     }
@@ -29,6 +33,7 @@ footer {
         flex-direction: column;
         justify-content: space-between;
         gap: 10px;
+        text-transform: capitalize;
       }
     }
     @media (max-width: 890px) {
