--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -10,7 +10,7 @@ nav {
   }
   display: flex;
   justify-content: space-around;
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+  // box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
   .logoContainer {
     padding-top: 20px;
   }
@@ -20,11 +20,13 @@ nav {
     justify-items: center;
     align-items: center;
     gap: 30px;
-    color: $darkGray;
     // font-size: 14px;
     font-weight: 800;
     @media (max-width: 545px) {
       flex-direction: column;
+    }
+    p {
+      color: $darkGreen;
     }
   }
 }
