changed hosting of resources at contentful and refactor content call

--- a/src/styles/components/_members.scss
+++ b/src/styles/components/_members.scss
@@ -8,7 +8,7 @@
     width: 90%;
   }
   .memberTypeContainer{
-    background-color: $lightBlue;
+    background-color: $darkTeal;
     width: 100%;
     height: 5rem;
     display: flex;
