--- a/src/styles/components/_mediaList.scss
+++ b/src/styles/components/_mediaList.scss
@@ -1,5 +1,5 @@
 .pageTitleContainer {
-  background-color: $lightBlue;
+  background-color: $darkTeal;
   width: 100%;
   height: 5rem;
   display: flex;
