added favicon and changed some style

--- a/src/styles/components/_mediaList.scss
+++ b/src/styles/components/_mediaList.scss
@@ -11,7 +11,7 @@
     line-height: 2.2rem;
     text-transform: uppercase;
     color: $white;
-    margin-left: 30px;
+    margin: 0 30px;
   }
 }
 
@@ -70,7 +70,7 @@
     line-height: 1rem;
     color: $gray;
     &::after {
-      content: '->';
+      content: "->";
       margin-left: 10px;
     }
     &:hover {
@@ -82,7 +82,7 @@
   }
 }
 
-@media(max-width: 995px) {
+@media (max-width: 995px) {
   .mediaTextContainer {
     .mediaTitle {
       letter-spacing: -1px;
@@ -90,7 +90,7 @@
   }
 }
 
-@media(max-width: 938px) {
+@media (max-width: 938px) {
   .mediaList {
     gap: 40px 20px;
     .mediaContainer {
@@ -99,7 +99,7 @@
   }
 }
 
-@media(max-width: 905px) {
+@media (max-width: 905px) {
   .mediaList {
     .mediaContainer {
       flex: 1 0 calc(50% - 20px);
@@ -118,7 +118,7 @@
   }
 }
 
-@media(max-width: 771px) {
+@media (max-width: 771px) {
   .mediaTextContainer {
     .mediaType {
       font-size: 0.7rem;
@@ -131,7 +131,7 @@
   }
 }
 
-@media(max-width: 607px) {
+@media (max-width: 607px) {
   .mediaList {
     display: block;
     .mediaContainer {
@@ -145,7 +145,16 @@
   }
 }
 
-@media(max-width: 324px) {
+@media (max-width: 534px) {
+  .pageTitleContainer {
+    .pageTitle {
+      font-size: 1.5rem;
+      line-height: 1.5rem;
+    }
+  }
+}
+
+@media (max-width: 324px) {
   .mediaTextContainer {
     .mediaType {
       font-size: 0.6rem;
