modified media title styling to meet the client's request

--- a/src/styles/components/_mediaList.scss
+++ b/src/styles/components/_mediaList.scss
@@ -36,6 +36,7 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 10px;
+  margin-bottom: 10px;
   .mediaType {
     display: inline-block;
     text-align: left;
@@ -43,9 +44,13 @@
     font-weight: 500;
   }
   .mediaTitle {
+    height: 90px;
     font-weight: 600;
-    height: 250px;
     text-align: left;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
   }
 }
 
@@ -100,15 +105,10 @@
   }
 }
 
-@media (max-width: 905px) {
+@media (max-width: 899px) {
   .mediaList {
     .mediaContainer {
       flex: 1 0 calc(50% - 20px);
-    }
-  }
-  .mediaTextContainer {
-    .mediaTitle {
-      height: 150px;
     }
   }
   .mediaLogoContainer {
@@ -128,6 +128,7 @@
     .mediaTitle {
       font-size: 1rem;
       line-height: 1.2rem;
+      height: 75px;
     }
   }
 }
@@ -140,6 +141,7 @@
     }
   }
   .mediaTextContainer {
+    margin-bottom: 5px;
     .mediaTitle {
       height: auto;
     }
@@ -160,6 +162,7 @@
 
 @media (max-width: 324px) {
   .mediaTextContainer {
+    margin-bottom: 0px;
     .mediaType {
       font-size: 0.6rem;
       line-height: 0.8rem;
