--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,9 +2,6 @@ footer {
   box-shadow: 7px -1px 5px rgb(0 0 0 / 5%);
   font-weight: 800;
   padding: 20px 0 50px 0;
-  @media (max-width: 890px) {
-    padding: 20px 50px;
-  }
   @media (max-width: 414px) {
     padding: 20px;
   }
@@ -17,17 +14,13 @@ footer {
       color: $darkGreen;
     }
 
-    .logoContainer {
-      margin-bottom: 25px;
-    }
+    // .logoContainer {
+    //   margin-bottom: 25px;
+    // }
     .socialMediaContainer {
       display: flex;
       justify-content: flex-end;
       gap: 100px;
-      @media (max-width: 890px) {
-        flex-direction: column;
-        gap: 25px;
-      }
       ul {
         display: flex;
         flex-direction: column;
@@ -36,10 +29,20 @@ footer {
         text-transform: capitalize;
       }
     }
-    @media (max-width: 890px) {
+  }
+}
+
+@media (max-width: 890px) {
+  footer {
+    padding: 20px 50px;
+    .footerContainer {
       flex-direction: column;
       align-items: self-start;
       gap: 25px;
+      .socialMediaContainer {
+        flex-direction: column;
+        gap: 25px;
+      }
     }
   }
 }
