--- a/src/styles/global/_app.scss
+++ b/src/styles/global/_app.scss
@@ -366,7 +366,7 @@ p {
 
 .logoContainer {
   width: 280px;
-  padding: 20px 0 0;
+  // padding: 20px 0 0;
   @media (max-width: 414px) {
     width: clamp(250px, 70vw, 280px);
   }
