--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,4 @@
 @import "./components/errorPage";
 @import "./components/errorData";
 @import "./components/loader";
+@import "./components/loaderMember";
