created basic loader setting

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,4 @@
 @import "./components/errorData";
 @import "./components/loader";
 @import "./components/loaderMember";
+@import "./components/loaderAnimation";
